--- a/meta/main.yml
+++ b/meta/main.yml
@@ -133,5 +133,5 @@ galaxy_info:
   #- system
   - web
 dependencies:
-  - jsnshrmn.centos7
-  - jsnshrmn.apache2
+  - OULibraries.centos7
+  - OULibraries.apache2
