--- a/requirements.yml
+++ b/requirements.yml
@@ -1,9 +1,9 @@
 ---
-# fetch jsnshrmn.centos7 from github
+# fetch OULibraries.centos7 from github
 - src: https://github.com/OULibraries/ansible-role-centos7
   version: master
-  name: jsnshrmn.centos7
-# fetch jsnshrmn.apache2 from github
+  name: OULibraries.centos7
+# fetch OULibraries.apache2 from github
 - src: https://github.com/OULibraries/ansible-role-apache2
   version: master
-  name: jsnshrmn.apache2
+  name: OULibraries.apache2
