--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 ## defaults file for ngrok
 ngrok_dir: '/opt/oulib/ngrok'
-ngrok_app: 'apache2'
+ngrok_http_port: '80'
+ngrok_tls_port: '443'
 ngrok_dn_suffix: 'ngrok.io'
 sites: ['example']
