--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,4 +4,5 @@ ngrok_dir: '/opt/oulib/ngrok'
 ngrok_http_port: '80'
 ngrok_tls_port: '443'
 ngrok_dn_suffix: 'ngrok.io'
+ngrok_tunnel_proto: 'tls'
 sites: ['example']
