--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -33,5 +33,5 @@
     src: ngrok.yml.j2
     dest: "{{ ngrok_dir }}/etc/ngrok.yml"
 - name: ngrok tls tunnels running
-  shell: "nohup {{ ngrok_dir }}/bin/ngrok start {{ item }}-tls --config {{ ngrok_dir }}/etc/ngrok.yml &"
+  shell: "nohup {{ ngrok_dir }}/bin/ngrok start {{ item }}-{{ ngrok_tunnel_proto }} --config {{ ngrok_dir }}/etc/ngrok.yml &"
   with_items: "{{ sites }}"
