Revert ngrok fetch to original url.

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -17,11 +17,11 @@
 - name: Get ngrok
   get_url:
     dest: "{{ ngrok_dir }}/"
-    url: https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
+    url: https://dl.ngrok.com/ngrok_2.0.19_linux_amd64.zip
   when: ngrok.stat.exists == False
 - name: Unpack ngrok
   unarchive:
-    src: "{{ ngrok_dir }}/ngrok-stable-linux-amd64.zip"
+    src: "{{ ngrok_dir }}/ngrok_2.0.19_linux_amd64.zip"
     dest: "{{ ngrok_dir }}/bin/"
     copy: no
   when: ngrok.stat.exists == False
