taking a swing at making tunnel config more flexible.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,5 @@
 ---
 ## defaults file for ngrok
 ngrok_dir: '/opt/oulib/ngrok'
-ngrok_port: '443'
-ngrok_dn_suffix: 'ngrok.io'
-ngrok_tunnel_proto: 'tls'
-sites: ['example']
+tunnels:
+- { name: 'example', dn_suffix: 'ngrok.io', port: '443', proto: 'tls' }
