Remove role dependency on OUlibraries.centos7.
Having the role listed as a dependency causes it to run whenever the ngrok role is run, which adds unnecessary wait time to ngrok changes.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -132,5 +132,5 @@ galaxy_info:
   #- packaging
   #- system
   - web
-dependencies:
-  - OULibraries.centos7
+# dependencies:
+# - OULibraries.centos7
